fixed assistant z-index

--- a/modules/_assistant.scss
+++ b/modules/_assistant.scss
@@ -1,5 +1,6 @@
 assistant{
     z-index: 100001 !important;
+    position: relative;
     .close-lightbox{
         display: none;
     }
